<?xml version="1.0" encoding="utf-8"?>
<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.pokemondetails.view.PokemonDetailsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_selected_pokemon_message"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/loader"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sprite"
                android:layout_width="200dp"
                android:layout_height="200dp"
                tools:src="@drawable/poke_loader" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                tools:text="PokemonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/abilities"
                android:textSize="21sp"
                android:layout_marginTop="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/abilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Abilities" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/types"
                android:textSize="21sp"
                android:layout_marginTop="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                tools:text="Types" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/error_message"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_message"
            android:layout_centerHorizontal="true"
            android:text="@string/retry" />
    </RelativeLayout>

</ViewAnimator>